<resources>
    <string name="app_name">MLink</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">  请输入手机号码</string>
    <string name="prompt_password">  请输入密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱不可用</string>
    <string name="error_invalid_password">密码太短了</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_settings">登录设置</string>
    <string name="feedback_history">反馈历史</string>
    <string name="pageTitle_login">账号登录</string>
    <string name="login_logo">login_logo</string>
    <string name="login">登  录</string>
    <string name="reg_reminder">  注册</string>
    <string name="pwd_reminder">忘记密码  </string>
    <string name="login_account_icon">这里输入登录账号</string>
    <string name="login_pwd_icon">这里输入登录密码</string>
    <string name="pageTitle_problem_feedback">问题反馈</string>
    <string name="pageTitle_reg">账号注册</string>
    <string name="toast_forget_pwd">记忆力真差啊，连这么重要的密码都忘记....</string>
    <string name="register">快速注册</string>
    <string name="prompt_check_password">请确认密码</string>
    <string name="pageTitle">这是一个标题</string>
    <string name="pageTitle_myCenter">个人中心</string>
    <string name="recordOfGettingScores">积分获取记录</string>
    <string name="recordOfConsumingScores">积分消费记录</string>
    <string name="listOfScoresRink">积分排行榜</string>
    <string name="marketOfScores">积分商城</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="logOut">注销</string>
    <string name="pageTitle_fb_history">历史反馈列表</string>
    <string name="problem_page_adaptation">页面适配问题</string>
    <string name="problem_device_model">设备型号：iPhone 4S</string>
    <string name="problem_fb_time">反馈时间：2016-05-05</string>
    <string name="valueOfTasks">1项</string>
    <string name="valueOfFeedback">3个</string>
    <string name="valueOfUsefulFeedback">33%</string>
    <string name="valueOfMyRank">第1名</string>
    <string name="valueOfTotalScores">200</string>
    <string name="toastClicked">原型设计这里没有给新页面</string>
    <string name="app_logo_contentDescription">任务App的logo</string>
    <string name="itemTaskAppName">点滴客</string>
    <string name="itemTaskCompanyName">雁联移动科技</string>
    <string name="itemTaskTodo">检查用户体验</string>
    <string name="itemTaskAppDescription">参与众包测试的人很多，点滴之力汇聚在一起</string>
    <string name="itemTaskBtnAppOpen">打开</string>
    <string name="itemTaskBtnAppFeedback">反馈问题</string>
    <string name="userName">用户名</string>
    <string name="projectName">项目名称</string>
    <string name="whoDeploy">发布者</string>
    <string name="platformOfDeploying">发布平台</string>
    <string name="valueOfScores">积分值：</string>
    <string name="iv_main_bg_top">中心背景</string>
    <string name="iv_go_to_center">去个人中心</string>
    <string name="iv_get_task">获取任务</string>
    <string name="iv_exchange_scores">积分兑换</string>
    <string name="testTxt">商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述商品描述。</string>
    <string name="exchange_immediately">立即兑换</string>
    <string name="name_goods_description">商品介绍</string>
    <string name="bug_feedback_content">Bug 反馈具体内容，最多 500 个字符</string>
    <string name="bug_feedback_type">Bug 类型选择</string>
    <string name="long_click_to_delete">* 长按图片可删除</string>
    <string name="submit_btn">提 交</string>
    <string name="add_pic">添加图片</string>
    <string name="problem_fd_user">反馈人：张三</string>
    <string name="name_feedback_description">反馈详情</string>
    <string name="testTxt2">Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述Bug描述</string>
    <string name="share_content">分享给你 MLink</string>
    <string name="share_to">分享到</string>
</resources>
