<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/id_fb_history_item_problem_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/problem_page_adaptation"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/id_fb_history_item_device_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/problem_device_model"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/id_fb_history_item_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/problem_fb_time"

        android:textSize="13sp" />

</LinearLayout>