<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.github.isayes.mlink.activity.MarketDetailActivity">

    <include layout="@layout/mytoolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_common_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/id_fb_history_item_problem_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/problem_page_adaptation"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_fb_history_item_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/problem_fd_user"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/id_fb_history_item_device_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/problem_device_model"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/id_fb_history_item_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/problem_fb_time"
            android:textSize="13sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/item_common_bg"
        android:padding="16dp">

        <TextView
            android:id="@+id/id_name_feedback_description"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:paddingBottom="2dp"
            android:text="@string/name_feedback_description"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_below="@id/id_name_feedback_description"
            android:id="@+id/id_feedback_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_marginBottom="8dp"
            android:text="@string/testTxt2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/id_feedback_description"
            android:padding="8dp"
            android:scaleType="fitStart"
            android:src="@drawable/test_pic_left" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/id_feedback_description"
            android:padding="8dp"
            android:scaleType="fitEnd"
            android:src="@drawable/test_pic_right" />

    </RelativeLayout>

</LinearLayout>